--- a/projects/navbar.html
+++ b/projects/navbar.html
@@ -4,8 +4,81 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="navbar.css" />
+    <!-- <link rel="stylesheet" href="navbar.css" /> -->
     <title>Website</title>
+    <style>
+      *{
+    font-family: finlandica;
+    font-size: 10px;
+    margin: 0px;
+    padding: 0px;
+}
+
+/* ---------------------- HEADER ------------------------- */
+header{
+    height: 6rem;
+    width: 100vw;
+    box-shadow: 2px 2px 17px -12px black;
+    background-color: white;
+    /* border: 2px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+header .cover{
+    width: 97%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem 2rem;
+    
+}
+
+/* --------------------- LOGO ------------------------- */
+header #logo{
+    height: 4rem;
+
+}
+
+/* ------------------------------- NAVBAR --------------------------- */
+#navbar ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 2px solid orange; */
+    width: 40rem;
+}
+
+#navbar ul li a{
+    text-decoration: none;
+    color: black;
+    font-size: 2rem;
+}
+#navbar ul li a:hover{
+    color: rgb(0, 132, 255);
+}
+
+#navbar li{
+    list-style: none;
+    /* border: 2px solid green; */
+}
+
+/* -------------------------------------- ORDER BUTTON ------------------------- */
+#navbar .orderBtn{
+    text-align: center;
+    /* border: 2px solid black; */
+}
+
+header .orderBtn button{
+    font-size: 1.5rem;
+    padding: 0.4rem 1.2rem;
+    border-radius: 23px;
+    border: 4px solid rgb(0, 132, 255);
+    color: rgb(0, 132, 255);
+    cursor: pointer;
+}
+    </style>
   </head>
   <body>
     <header>
